Fix #126354: Cycles: Calculate correct bounds for hair objects

Hair objects did not take the curves into account that could go
outside the bounds set by the keys of the curves. These bounds
are used in the dynamic bvh, leading to clipped curves in the
viewport.

Pull Request: https://projects.blender.org/blender/blender/pulls/126157