intern/cycles/scene/hair.cpp
@@ -12,6 +12,7 @@
 #include "integrator/shader_eval.h"
 
 #include "util/progress.h"
+#include "util/tbb.h"
 
 CCL_NAMESPACE_BEGIN
 
@@ -396,11 +397,28 @@ void Hair::compute_bounds()
 {
   BoundBox bnds = BoundBox::empty;
   size_t curve_keys_size = curve_keys.size();
+  size_t curve_num = num_curves();
 
   if (curve_keys_size > 0) {
-    for (size_t i = 0; i < curve_keys_size; i++) {
-      bnds.grow(curve_keys[i], curve_radius[i]);
-    }
+    bnds.grow(parallel_reduce(
+        blocked_range<size_t>(0, curve_num),
+        BoundBox(BoundBox::empty),
+        [&](const blocked_range<size_t> &range, const BoundBox &partial_bounds) {
+          BoundBox current_bounds = partial_bounds;
+          for (size_t i = range.begin(); i < range.end(); ++i) {
+            const Curve curve = get_curve(i);
+            const int num_segments = curve.num_segments();
+            for (int k = 0; k < num_segments; k++) {
+              curve.bounds_grow(k, curve_keys.data(), curve_radius.data(), current_bounds);
+            }
+          }
+          return current_bounds;
+        },
+        [](const BoundBox &bounds_a, const BoundBox &bounds_b) {
+          BoundBox combined_bounds = bounds_a;
+          combined_bounds.grow(bounds_b);
+          return combined_bounds;
+        }));
 
     Attribute *curve_attr = attributes.find(ATTR_STD_MOTION_VERTEX_POSITION);
     if (use_motion_blur && curve_attr) {
